Bug 501250 - Problems view configuration dialog has wrong background
Removed the CSS rule that renders a wrong color in the Problems View >
Filters dialog. This change is the fix for for Linux, GTK2 and GTK3. 

Linux (GTK3)
without change: http://i.imgur.com/CutX61y.png
with the change: http://i.imgur.com/NJhDCBC.png
--> fixes the "Contains" Text.

Linux (GTK2)
without change: http://i.imgur.com/jdgWmSa.png
with the change: http://i.imgur.com/fsdtDOi.png
--> Fixes the "Types" TreeView.

--- a/bundles/org.eclipse.ui.themes/css/e4_default_gtk.css
+++ b/bundles/org.eclipse.ui.themes/css/e4_default_gtk.css
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 420836
  *     Mickael Istria <mistria@redhat.com> - 325937
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 501250
  *******************************************************************************/
 
 @import url("platform:/plugin/org.eclipse.ui.themes/css/e4_basestyle.css");
@@ -127,10 +128,6 @@ Form {
 	h-bottom-keyline-2-color: #eaeaea;
 	h-bottom-keyline-1-color: #eaeaea;
 
-	/* We also have to force the background mode (the
-   * Label/ToolBar in the heading should inherit it).
-   */
-	swt-background-mode: 'force';
 }
 
 
